# oprf

./: .prettierrc.toml  Cargo.toml  clippy.toml
benches/: bench.rs  criterion.rs  iai.rs
src/: cipher_suite.rs  ciphersuite.rs  common.rs  error.rs  group.rs  internal.rs  key.rs  lib.rs  oprf.rs  poprf.rs  serde.rs  util.rs  voprf.rs
src/group/: decaf448.rs  elliptic_curve.rs  primeorder.rs  ristretto255.rs
src/test_vectors/: cycle_rng.rs  mod.rs  oprf.rs  parse.rs  poprf.rs  voprf.rs
test/: Cargo.toml
test/src/: bench.rs  common.rs  edwards25519.rs  edwards448.rs  helper.rs  k256.rs  lib.rs  rng.rs  serde.rs  serialized.rs  util.rs
test/src/cipher_suite/: expand_msg.rs  group.rs  hash.rs  mod.rs
test/src/mock/: expand_msg.rs  group.rs  mod.rs
tests/: batch.rs  complete.rs  deserialize.rs  key.rs  length.rs  output.rs  proof.rs  repr.rs  serde.rs  traits.rs
tests/rfc_test_vectors/: basic.rs  batch.rs  mod.rs  parse.rs  vectors.json
tests/test_vectors/: basic.rs  batch.rs  generate.rs  mod.rs  parse.rs  vectors.json
tests/util/: helper.rs  mod.rs
tests/util/mock/: expand_msg.rs  group.rs  hash.rs  mod.rs
