[package]
edition = { workspace = true }
name = "oprf-test"
publish = false
version = "0.0.0"

[features]
alloc = []
serde = ["dep:serde_test"]

[dependencies]
curve25519-dalek = { workspace = true }
derive-where = { workspace = true }
digest = { workspace = true }
ed448-goldilocks = { workspace = true }
elliptic-curve = { workspace = true }
hash2curve = { workspace = true }
hybrid-array = { workspace = true }
oprf = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde_test = { workspace = true, optional = true }
zeroize = { workspace = true, features = ["derive"] }

[lints]
workspace = true
