[package]
edition = { workspace = true }
name = "oprf-test"
publish = false
version = "0.0.0"

[features]
alloc = ["curve25519-dalek/alloc", "k256/alloc", "oprf/alloc"]
serde = ["curve25519-dalek/serde", "oprf/serde", "dep:serde_test"]

[dependencies]
curve25519-dalek = { workspace = true }
derive-where = { workspace = true }
digest = { workspace = true }
ed448-goldilocks = { workspace = true }
elliptic-curve = { workspace = true }
group = { workspace = true }
hash2curve = { workspace = true }
hybrid-array = { workspace = true }
k256 = { workspace = true, features = ["group-digest"] }
oprf = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
paste = { workspace = true }
rand_core = { workspace = true, features = ["os_rng"] }
serde = { workspace = true }
serde_test = { workspace = true, optional = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

[lints]
workspace = true
